src-tauri/error.txt
    Checking tauri-app v0.1.0 (C:\Users\ayaan\Desktop\my\command-kosh\src-tauri)
error[E0599]: no method named `path` found for reference `&AppHandle` in the current scope
 --> src\store.rs:7:31
  |
7 |     let mut path = app_handle.path().app_data_dir().unwrap_or_else(|_| PathBuf::from("."));
  |                               ^^^^ method not found in `&AppHandle`
  |
  = help: items from traits can only be used if the trait is in scope
help: trait `Manager` which provides `path` is implemented but not in scope; perhaps you want to import it
  |
1 + use tauri::Manager;
  |

error[E0599]: no method named `manage` found for mutable reference `&mut tauri::App` in the current scope
    --> src\lib.rs:47:17
     |
  47 |             app.manage(app_state);
     |                 ^^^^^^
     |
     = help: items from traits can only be used if the trait is in scope
help: there is a method `manager` with a similar name, but with different arguments
    --> C:\Users\ayaan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\lib.rs:1066:5
     |
1066 |     fn manager(&self) -> &AppManager<R>;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `Manager` which provides `manage` is implemented but not in scope; perhaps you want to import it
     |
   1 + use tauri::Manager;
     |

For more information about this error, try `rustc --explain E0599`.
error: could not compile `tauri-app` (lib) due to 2 previous errors
